--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Parcel Sandbox</title>
-    <meta charset="UTF-8" />
+    <title>Data structures</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-
   <body>
     <div id="app"></div>
     <script src="index.ts"></script>
